--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section class="about" id="about">
       <div class="about-img">
-        <img src="/images/about-me.jpg" alt="aboout-me" />
+        <img src="about-me.jpg" alt="aboout-me" />
       </div>
 
       <div class="about-text">
@@ -183,7 +183,7 @@
 
       <div class="portfolio-content">
         <div class="row">
-          <img src="/images/Appnapan.jpg" alt="Appnapan" />
+          <img src="Appnapan.jpg" alt="Appnapan" />
           <div class="layer">
             <h5>Appnapan</h5>
             <p>
